--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,52 @@ code {
 
 }
 
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #ddd;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 /* .Navbar:hover {
   background-color: green;
 } */
@@ -43,8 +89,22 @@ a {
   background-image: url("https://cariera.co/wp-content/uploads/2020/05/team-work.jpg");
   height: 80vh;
   margin: auto;
+  background-position: center;
+  background-blend-mode: darken;
 }
 
 .LandingForm {
   margin: auto;
 }
+
+.darkenImage {
+  background-color: black;
+  height: 80vh;
+  opacity: 50%;
+
+}
+
+/* input {
+  background-color: white;
+  z-index: -2;
+} */
