--- a/src/index.css
+++ b/src/index.css
@@ -67,18 +67,10 @@ code {
   display: block;
 }
 
-/* .Navbar:hover {
-  background-color: green;
-} */
-
 li {
   list-style-type: none;
   margin: auto;
 }
-
-/* li a:hover {
-  background-color: black;
-} */
 
 a {
   text-decoration: none;
@@ -86,25 +78,86 @@ a {
 }
 
 .Landing {
-  background-image: url("https://cariera.co/wp-content/uploads/2020/05/team-work.jpg");
-  height: 80vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cariera.co/wp-content/uploads/2020/05/team-work.jpg");
+  height: 45vh;
   margin: auto;
   background-position: center;
   background-blend-mode: darken;
+  /* filter: brightness(50%) */
+  padding: 20vh 0 0 15vw;
 }
+
+/* .darkenImage {
+  margin: 20vh 0 0 30vw;
+} */
 
 .LandingForm {
+  /* background-color: white; */
+  width: 70vw;
+}
+
+.white-font {
+  color: white;
+}
+
+.hero-inputs {
+  height: 36px;
+  width: 20vw;
+  border: none;
+  border-right: 1px black solid;
+  padding: 0;
+
+}
+select {
+  height: 36px;
+  width: 20vw;
+  border: none;
+
+}
+
+.underLine {
+  text-decoration: underline;
+}
+
+.styledButton {
+  background-color: blue;
+  color: white;
+  border: none;
+  width: 9.8vw;
+  height: 36px;
+  padding: 0;
+}
+
+.styledButton:hover {
+  background-color: rgb(61, 61, 253);
+}
+
+.img1 {
+  background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(0, 0, 0, 0.5)), url("https://cariera.co/wp-content/uploads/2020/05/team-work.jpg");
+  height: 45vh;
+  width: 50vw;
   margin: auto;
+  background-position: center;
+  background-blend-mode: darken;
+  /* filter: brightness(50%) */
+  /* padding: 5vw 0 0 5vw; */
+  text-align: center;
+  color: white;
 }
 
-.darkenImage {
-  background-color: black;
-  height: 80vh;
-  opacity: 50%;
-
+.img2 {
+  background-image: linear-gradient(rgb(0, 0, 255, 0.5), rgba(0, 0, 0, 0.5)), url("https://cariera.co/wp-content/uploads/2020/05/appearance.jpg");
+  height: 45vh;
+  width: 50vw;
+  /* margin: auto; */
+  background-position: center;
+  background-blend-mode: darken;
+  /* filter: brightness(50%) */
+  /* padding: 10vw 0 0 15vw; */
 }
 
-/* input {
-  background-color: white;
-  z-index: -2;
-} */
+.Employer-Canidate {
+  width: 100vw;
+  height: 30vh;
+  display: flex;
+}
